[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-isa-authority"
version = "0.1.0"
description = "ISA governance — opcode conflict arbitration and canonical authority"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
